Fixed issue #35, "Availability" is unreadable in some browsers.

--- a/themes/phoenix/less/item-record.less
+++ b/themes/phoenix/less/item-record.less
@@ -29,7 +29,7 @@ h5 {
   font-size: 1.2em;
   color: #670000;
   margin: 1em 0 0 0.35em;
-  font-style: italic;
+  font-style: normal;
   & + h6 {
     margin-top: 0.5em;
   }
